# xdma_fpga

./: CMakeLists.txt  README.md  build.sh
src/: NNC_InterfaceControlDocument.h  config.h  dataModel.h  fpgaControl.cpp  fpgaControl.h  log.h  paramManager.cpp  paramManager.h  semaphore.cpp  semaphore.h  xdmaApi.cpp  xdmaApi.h
src/detect/: yoloDetect.cpp  yoloDetect.h  yoloDetect2.cpp  yoloDetect2.h
src/xdma_linux/: dma_utils.c  xdma.cpp  xdma.h
src/xdma_win/: dma_ults.c  xdma.cpp  xdma.h
test/: CMakeLists.txt  main.cpp
